--- a/app/globals.css
+++ b/app/globals.css
@@ -221,7 +221,7 @@
   }
 
   .footer {
-    @apply border-t border-border bg-accent text-accent-foreground p-8 min-h-[200px];
+    @apply border-t border-border bg-accent text-accent-foreground p-8 min-h-[100px];
   }
 
   .padded-container {
